tests/compile_fail/declare_scheduler_all_three_binaries.stderr
error: declare_scheduler!: more than one scheduler source declared. Pick exactly one of `binary`, `binary_path`, or the `kernel_builtin_enable` + `kernel_builtin_disable` pair. Each maps to a different `SchedulerSpec` variant (`Discover`, `Path`, `KernelBuiltin`) and they cannot stack.
 --> tests/compile_fail/declare_scheduler_all_three_binaries.rs:5:20
  |
5 | declare_scheduler!(ALL_THREE_SOURCES, {
  |                    ^^^^^^^^^^^^^^^^^
